added additional flag support for CLI

--- a/config.json
+++ b/config.json
@@ -1,17 +1,15 @@
 {
-    "servers": [
-      {
-        "location": "us-east-1",
-        "size": "m5.large",
-        "usersPerServer": "1",
-        "num": "1",
-        "onDemand": "T",
-        "subnetId": "subnet-00d66cc55ec4cf4bd"
-      }
+    "apikey": "cc3c8efc95f83763f2e70d6ec6deaaa6",
+    "servers":
+    [
+        {
+            "location":"us-east-1",
+            "num":"1",
+            "onDemand":"T",
+            "size":"m5.large",
+            "subnetId":"subnet-00d66cc55ec4cf4bd",
+            "usersPerServer":"1"
+        }
     ],
-   "keyPairId": "5203",
-   "numServers": "1",
-   "version": "5.5",
-   "name": "CliLoadTestWithJson",
-   "desc": "Test Description"
- }
+    "keyPairId":"5203"
+}
